--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,6 +4,7 @@
     <title>Thymeleaf Demo</title>
 </head>
 <body>
-    <h1>Welcome, <span th:text="${name}">User</span>!</h1>
+<!----- Login page ------>
+<h1 th:text="${message}">Welcome to the Home Page</h1>
 </body>
 </html>
