--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <!----- Login page ------>
-<h1 th:text="${message}">Welcome to the Home Page</h1>
+<h1 th:text="${message}"> <span th:text="${message}"></span></h1>
 </body>
 </html>
